# Rainbow

./: .gitignore  CMakeLists.txt  README.md  Rainbow.sln  setup_builds.bat
Rainbow/: 8640spp.cpp  Rainbow.vcxproj  Rainbow.vcxproj.filters  imgui.ini
UnitTest/: UnitTest.vcxproj  test.cpp
ext/glog/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  config.h  demangle_unittest.vcxproj  demangle_unittest.vcxproj.filters  glog-config-version.cmake  glog-config.cmake  glog-targets.cmake  glog.vcxproj  glog.vcxproj.filters  google-glog.sln  logging_unittest.vcxproj  logging_unittest.vcxproj.filters  stl_logging_unittest.vcxproj  stl_logging_unittest.vcxproj.filters  utilities_unittest.vcxproj  utilities_unittest.vcxproj.filters
ext/glog/glog/: logging.h
ext/imgui/examples/: imgui_impl_glfw.cpp
ext/imgui/examples/example_glfw_opengl3/: example_glfw_opengl3.vcxproj  example_glfw_opengl3.vcxproj.filters  main.cpp
ext/imgui/examples/example_glfw_vulkan/: example_glfw_vulkan.vcxproj
ext/imgui/examples/example_win32_directx11/: example_win32_directx11.vcxproj
ext/imgui/examples/example_win32_directx9/: main.cpp
ext/lodepng/: lodepng.h
ext/pcg32/: pcg32.h
ext/tinyformat/: tinyformat.h
log/: 20180811.md  20180813.md  20180814.md  20180815.md  20180820.md  20180822.md  20180823.md  20180827.md  20180828.md  20180922.md  20180924.md  20181011.md  20181120.md
scenes/cbox/: cbox(mesh).xml  cbox(sphere).xml  cbox-distributed.xml  cbox-whitted-mirror.xml  cbox-whitted.bak  cbox-whitted.xml  cbox.xml
scenes/cornell-box/: scene.xml  scene2.xml  scene3.xml
scenes/dragon/: mitsuba-scene-spot.xml  mitsuba-scene.xml  scene.xml  scene1.xml
scenes/fire/: fire.xml
scenes/glass-of-water/: LICENSE.txt  scene.xml
scenes/hetvol/: hetvol.exr  hetvol.xml
scenes/light-test/: 245L_10LEDE10_XXXX_3K_R2_PY.ies  ACP_17M_76.ies  LTL11041.ies  RIO_1.ies  scene.xml
scenes/motto/: motto-diffuse.exr  motto-diffuse.xml  motto-mirror.xml
scenes/rainbow/: scene - 副本.xml  scene.xml
scenes/scene-test/: scene-test.xml  scene.xml
scenes/veach-bidir/: scene.xml
scenes/veach-mi/: scene.xml
scenes/veach-mis/: scene - 副本.xml  scene.xml
scenes/veach_mi/: scene.xml  veach_mis.xml
scenes/volumetric-caustic/: scene.xml
scenes/water-caustic/: LICENSE.txt  scene - 副本.xml  scene.xml
src/: main.cpp  rainbow.cpp
src/accelerators/: bvh.cpp  bvh.h
src/cameras/: perspective.cpp  perspective.h
src/core/: api.cpp  api.h  bbox.cpp  bbox.h  bsdf.cpp  bsdf.h  camera.cpp  camera.h  common.cpp  common.h  embreescene.cpp  embreescene.h  error.cpp  error.h  film.cpp  film.h  filter.cpp  filter.h  frame.h  gui.cpp  gui.h  imageio.cpp  imageio.h  integrator.cpp  integrator.h  interaction.cpp  interaction.h  light.cpp  light.h  logger.cpp  logger.h  material.cpp  material.h  medium.cpp  medium.h  memory.cpp  memory.h  microfacet.cpp  microfacet.h  object.cpp  (+26 more)
src/ext/: CMakeLists.txt  lodepng.cpp
src/ext/halton/: halton_sampler.h  main.cpp
src/ext/imgui/: imgui_demo.cpp
src/ext/imgui/examples/: imgui_impl_glfw.h  imgui_impl_opengl3.cpp
src/ext/imgui/examples/example_glfw_opengl2/: example_glfw_opengl2.vcxproj
src/ext/imgui/examples/example_glfw_opengl3/: main.cpp
src/ext/imgui/examples/example_sdl_opengl3/: example_sdl_opengl3.vcxproj
src/ext/imgui/examples/example_win32_directx10/: example_win32_directx10.vcxproj
src/ext/imgui/examples/example_win32_directx9/: example_win32_directx9.vcxproj
src/ext/pcg32/: pcg32.h
src/ext/stb_images/: stb_image_write.h
src/filters/: box.cpp  box.h  gaussian.cpp  gaussian.h  tent.cpp  tent.h
src/integrators/: direct.cpp  direct.h  path.cpp  path.h  pssmlt.cpp  pssmlt.h  pt.cpp  pt.h  volpath.cpp  volpath.h  whitted.cpp  whitted.h
src/lights/: point.cpp  point.h  spot.cpp  spot.h
src/lights/ies/: ieslight.cpp  ieslight.h  iesparser.cpp  iesparser.h
src/materials/: glass.cpp  glass.h  matte.cpp  matte.h  metal.h  mirror.cpp  mirror.h  roughconductor.cpp  roughconductor.h
src/media/: grid.h  heterogeneous.cpp  heterogeneous.h  homogeneous.cpp  homogeneous.h
src/samplers/: halton.cpp  halton.h  independent.cpp  independent.h
src/scene/: embreescene.cpp  embreescene.h  rainbowscene.h
src/scenes/: embreescene.cpp  embreescene.h  rainbowscene.cpp
src/shapes/: cube.cpp  cube.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/shapes/meshloaders/: wavefront.cpp  wavefront.h
src/tests/: vector.cpp
src/tests/gtest/: gtest-all.cc  gtest_main.cc
src/utility/: math.h  sampling.cpp  sampling.h  string.h
src/volumes/: constvolume.cpp  constvolume.h  grid.cpp  grid.h  gridvolume.cpp  gridvolume.h  openvdbvolume.cpp  openvdbvolume.h
